# mcp-my-mac

./: .gitignore  .pre-commit-config.yaml  DEV_README.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
src/mcp_server_my_mac/: __init__.py  __main__.py  server.py
src/mcp_server_my_mac/readers/: load_conda_info.py  load_system_profiler.py
tests/resources/: sample_SPHardwareDataType.txt  sample_conda_env_list.txt
